Add basic question object

--- a/StackExchangeChat.Console/appsettings.json
+++ b/StackExchangeChat.Console/appsettings.json
@@ -1,6 +1,8 @@
 ﻿{
   "ChatCredentials": {
-    "UserName": "",
+    "AcctCookie": "",
+    "AcctCookieExpiry": "yyyy-MM-dd HH:mm:ssZ",
+    "Email": "",
     "Password": ""
   }
 }
