--- a/StackExchangeChat.Console/StackExchangeChat.Console.csproj
+++ b/StackExchangeChat.Console/StackExchangeChat.Console.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\StackExchangeApi\StackExchangeApi.csproj" />
     <ProjectReference Include="..\StackExchangeChat\StackExchangeChat.csproj" />
   </ItemGroup>
 
