--- a/Rodgort/appsettings.json
+++ b/Rodgort/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "RodgortDB": "Server=127.0.0.1;Port=5432;Database=Rodgort;User Id=postgres;Password=password"
+  }
 }
