--- a/StackExchangeApi/StackExchangeApi.csproj
+++ b/StackExchangeApi/StackExchangeApi.csproj
@@ -12,5 +12,11 @@
     <PackageReference Include="System.Reactive" Version="4.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.WebUtilities">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.webutilities\2.1.1\lib\netstandard2.0\Microsoft.AspNetCore.WebUtilities.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 
 </Project>
