Allow API client to use an access token, if provided. Use the same timestamp when bulk processing records

--- a/Rodgort/appsettings.json
+++ b/Rodgort/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-
+  "AccessToken": "", 
   "ConnectionStrings": {
     "RodgortDB": "Server=127.0.0.1;Port=5432;Database=Rodgort;User Id=postgres;Password=password"
   }
