Bit of a cleanup, and let the app use a key.

--- a/Rodgort/appsettings.json
+++ b/Rodgort/appsettings.json
@@ -1,12 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "AccessToken": "", 
-  "ConnectionStrings": {
-    "RodgortDB": "Server=127.0.0.1;Port=5432;Database=Rodgort;User Id=postgres;Password=password"
-  }
+	"Logging": {
+		"LogLevel": {
+			"Default": "Warning"
+		}
+	},
+	"AllowedHosts": "*",
+	"AccessToken": "",
+	"AppKey": "",
+	"ConnectionStrings": {
+		"RodgortDB": ""
+	}
 }
