--- a/Rodgort/appsettings.Development.json
+++ b/Rodgort/appsettings.Development.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  }
+	"Logging": {
+		"LogLevel": {
+			"Default": "Warning"
+		}
+	},
+	"AllowedHosts": "*",
+	"AccessToken": "",
+	"AppKey": "wmRpeoJxp2wdxhuCARrEDg((",
+	"ConnectionStrings": {
+		"RodgortDB": "Server=127.0.0.1;Port=5432;Database=Rodgort;User Id=postgres;Password=password"
+	}
 }
