--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ build:
   stage: build
   image: microsoft/dotnet:latest
   script: 
-    - dotnet publish -c Release
+    - dotnet publish Rodgort -c Release
   artifacts:
     paths:
       - StackExchangeApi/bin/Release/netcoreapp2.1/publish/*.*
