--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 before_script:
   - apt-get install curl
-  - curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
+  - curl -sL https://deb.nodesource.com/setup_10.x | bash -
   - apt-get update
-  - sudo apt-get install -y nodejs
+  - apt-get install -y nodejs
 
 stages:
   - build
