Add chart of question count over time

--- a/Rodgort/ClientApp/package.json
+++ b/Rodgort/ClientApp/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "^5.2.10",
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@angular/router": "^5.2.10",
+    "angular-highcharts": "^7.0.2",
+    "highcharts": "^6.2.0",
     "core-js": "^2.5.6",
     "node-sass": "^4.9.0",
     "rxjs": "^5.5.10",
@@ -35,6 +37,7 @@
     "@types/jasmine": "^2.8.7",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.110",
+    "@types/highcharts": "^5.0.33",
     "codelyzer": "^4.3.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
