--- a/.gitignore
+++ b/.gitignore
@@ -333,3 +333,4 @@ ASALocalRun/
 # Local History for Visual Studio
 .localhistory/
 /StackExchangeChat.Console/appsettings.dev.json
+/Rodgort/appsettings.Development.json
