--- a/Rodgort/appsettings.json
+++ b/Rodgort/appsettings.json
@@ -5,9 +5,20 @@
 		}
 	},
 	"AllowedHosts": "*",
-	"AccessToken": "",
-	"AppKey": "",
 	"ConnectionStrings": {
 		"RodgortDB": ""
-	}
+	},
+
+	"HostName": "", 
+
+	"ChatCredentials": {
+		"Email": "",
+		"Password": "",
+		"AcctCookie": ""
+	},
+	"StackExchangeApiCredentials": {
+		"ClientId": "",
+		"AccessToken": "",
+		"AppKey": ""
+	} 
 }
