Fix default app settings

--- a/Rodgort/appsettings.json
+++ b/Rodgort/appsettings.json
@@ -8,17 +8,16 @@
 	"ConnectionStrings": {
 		"RodgortDB": ""
 	},
-
-	"HostName": "", 
-
 	"ChatCredentials": {
 		"Email": "",
 		"Password": "",
 		"AcctCookie": ""
 	},
+	"HostName": "",
+	"JwtSigningKey": "",
 	"StackExchangeApiCredentials": {
 		"ClientId": "",
-		"AccessToken": "",
+		"ClientSecret": "",
 		"AppKey": ""
-	} 
+	}
 }
