--- a/StackExchangeChat/StackExchangeChat.csproj
+++ b/StackExchangeChat/StackExchangeChat.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="System.Reactive" Version="4.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Utilities\Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
