Fix bug with trailing ; in processing manual questions. Add logging around manual processing. Make default logging less verbose

--- a/Rodgort/nlog.config
+++ b/Rodgort/nlog.config
@@ -30,6 +30,15 @@
       <parameter name="@logger" layout="${logger}" />
       <parameter name="@callSite" layout="${callsite}" />
     </target>
+
+      <target name="infoFile" xsi:type="File"
+            layout="${longdate} ${logger} ${message}${exception:format=ToString}"
+            fileName="/var/www/Rodgort/Logs/Rodgort.Info - ${shortdate}.log" />
+
+      <target name="errorFile" xsi:type="File"
+            layout="${longdate} ${logger} ${message}${exception:format=ToString}"
+            fileName="/var/www/Rodgort/Logs/Rodgort.Error - ${shortdate}.log" />
+
   </targets>
 
   <rules>
@@ -43,9 +52,14 @@
     <logger name="Microsoft.EntityFrameworkCore.Migrations.*" maxLevel="Info" final="true" />
     <logger name="Hangfire.*" maxLevel="Info" final="true" />
 
+    <!-- Ignore query logging -->
+    <logger name="Microsoft.EntityFrameworkCore.*" maxLevel="Info" final="true" />
+
+
     <!-- Ignore AspNetCore Info logs. -->
     <logger name="Microsoft.AspNetCore.*" maxLevel="Warn" final="true" />
 
-    <logger name="*" minlevel="Info" writeTo="database" />
+    <logger name="*" minlevel="Info" writeTo="database,infoFile" />
+    <logger name="*" minlevel="Error" writeTo="errorFile" />
   </rules>
 </nlog>
