--- a/Rodgort/ClientApp/package.json
+++ b/Rodgort/ClientApp/package.json
@@ -27,6 +27,7 @@
     "angular-highcharts": "^7.0.2",
     "core-js": "^2.5.6",
     "highcharts": "^6.2.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "rxjs": "^5.5.10",
     "tslib": "^1.9.0",
