--- a/Rodgort/ClientApp/package.json
+++ b/Rodgort/ClientApp/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@angular/router": "^5.2.10",
     "angular-highcharts": "^7.0.2",
+    "angular2-toaster": "^7.0.0",
     "core-js": "^2.5.6",
     "highcharts": "^6.2.0",
     "moment": "^2.24.0",
