Significantly improve progress page performance

--- a/Rodgort/nlog.config
+++ b/Rodgort/nlog.config
@@ -53,7 +53,7 @@
     <logger name="Hangfire.*" maxLevel="Info" final="true" />
 
     <!-- Ignore query logging -->
-    <logger name="Microsoft.EntityFrameworkCore.*" maxLevel="Info" final="true" />
+    <!--<logger name="Microsoft.EntityFrameworkCore.*" maxLevel="Info" final="true" />-->
 
 
     <!-- Ignore AspNetCore Info logs. -->
