Update local logging config

--- a/Rodgort/nlog.config
+++ b/Rodgort/nlog.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<!-- Mostly taken from https://github.com/NLog/NLog.Web/wiki/Getting-started-with-ASP.NET-Core-2, https://github.com/nlog/NLog/wiki/Database-target and https://github.com/damienbod/AspNetCoreNlog -->
+<!-- Mostly taken from https://github.com/NLog/NLog.Web/wiki/Getting-started-with-ASP.NET-Core-2, https://github.com/nlog/NLog/wiki/Database-target and https://github.                                        com/damienbod/AspNetCoreNlog -->
 
 <!-- Add the following attributes if you're having issues with getting nLog working -->
 <!--
@@ -20,8 +20,8 @@
       </dbProvider>
       <connectionString>${gdc:item=connectionString}</connectionString>
       <commandText>
-        INSERT INTO public."Logs"("TimeLogged", "Level", "Message", "Exception", "Logger", "Callsite")
-        VALUES (now() at time zone 'utc', @Level, @Message, @Exception, @Logger, @Callsite);
+        INSERT INTO logs(time_logged, level, message, exception, logger, callsite)
+        VALUES (now() at time zone 'utc', @level, @message, @exception, @logger, @callsite);
       </commandText>
 
       <parameter name="@level" layout="${level}" />
@@ -31,13 +31,17 @@
       <parameter name="@callSite" layout="${callsite}" />
     </target>
 
+      <target name="traceFile" xsi:type="File"
+            layout="${longdate} ${logger} ${message}${exception:format=ToString}"
+            fileName="Logs/Rodgort.Trace - ${shortdate}.log" />
+
       <target name="infoFile" xsi:type="File"
             layout="${longdate} ${logger} ${message}${exception:format=ToString}"
-            fileName="/var/www/Rodgort/Logs/Rodgort.Info - ${shortdate}.log" />
+            fileName="Logs/Rodgort.Info - ${shortdate}.log" />
 
       <target name="errorFile" xsi:type="File"
             layout="${longdate} ${logger} ${message}${exception:format=ToString}"
-            fileName="/var/www/Rodgort/Logs/Rodgort.Error - ${shortdate}.log" />
+            fileName="Logs/Rodgort.Error - ${shortdate}.log" />
 
   </targets>
 
@@ -53,13 +57,15 @@
     <logger name="Hangfire.*" maxLevel="Info" final="true" />
 
     <!-- Ignore query logging -->
-    <!--<logger name="Microsoft.EntityFrameworkCore.*" maxLevel="Info" final="true" />-->
+    <logger name="Microsoft.EntityFrameworkCore.*" maxLevel="Info" final="true" />
 
 
     <!-- Ignore AspNetCore Info logs. -->
     <logger name="Microsoft.AspNetCore.*" maxLevel="Warn" final="true" />
 
-    <logger name="*" minlevel="Info" writeTo="database,infoFile" />
+    <logger name="*" writeTo="database" />
+    <logger name="*" writeTo="traceFile" />
+    <logger name="*" minLevel="Info" writeTo="infoFile" />
     <logger name="*" minlevel="Error" writeTo="errorFile" />
   </rules>
 </nlog>
