Remove error endpoint. Don't print stack trace twice

--- a/Rodgort/nlog.config
+++ b/Rodgort/nlog.config
@@ -26,21 +26,21 @@
 
       <parameter name="@level" layout="${level}" />
       <parameter name="@message" layout="${message}" />
-      <parameter name="@exception" layout="${exception:format=ToString,StackTrace,Data:maxInnerExceptionLevel=10:exceptionDataSeparator=\r\n}" />
+      <parameter name="@exception" layout="${exception:format=ToString,Data:maxInnerExceptionLevel=10:exceptionDataSeparator=\r\n}" />
       <parameter name="@logger" layout="${logger}" />
       <parameter name="@callSite" layout="${callsite}" />
     </target>
 
       <target name="traceFile" xsi:type="File"
-            layout="${longdate} ${logger} ${message} ${exception:format=ToString,StackTrace,Data:maxInnerExceptionLevel=10:exceptionDataSeparator=\r\n}"
+            layout="${longdate} ${logger} ${message} ${exception:format=ToString,Data:maxInnerExceptionLevel=10:exceptionDataSeparator=\r\n}"
             fileName="Logs/Rodgort.Trace - ${shortdate}.log" />
 
       <target name="infoFile" xsi:type="File"
-            layout="${longdate} ${logger} ${message} ${exception:format=ToString,StackTrace,Data:maxInnerExceptionLevel=10:exceptionDataSeparator=\r\n}"
+            layout="${longdate} ${logger} ${message} ${exception:format=ToString,Data:maxInnerExceptionLevel=10:exceptionDataSeparator=\r\n}"
             fileName="Logs/Rodgort.Info - ${shortdate}.log" />
 
       <target name="errorFile" xsi:type="File"
-            layout="${longdate} ${logger} ${message} ${exception:format=ToString,StackTrace,Data:maxInnerExceptionLevel=10:exceptionDataSeparator=\r\n}"
+            layout="${longdate} ${logger} ${message} ${exception:format=ToString,Data:maxInnerExceptionLevel=10:exceptionDataSeparator=\r\n}"
             fileName="Logs/Rodgort.Error - ${shortdate}.log" />
 
   </targets>
