--- a/Rodgort/appsettings.json
+++ b/Rodgort/appsettings.json
@@ -1,23 +1,26 @@
 {
-	"Logging": {
-		"LogLevel": {
-			"Default": "Trace"
-		}
-	},
-	"AllowedHosts": "*",
-	"ConnectionStrings": {
-		"RodgortDB": ""
-	},
-	"ChatCredentials": {
-		"Email": "",
-		"Password": "",
-		"AcctCookie": ""
-	},
-	"HostName": "",
-	"JwtSigningKey": "",
-	"StackExchangeApiCredentials": {
-		"ClientId": "",
-		"ClientSecret": "",
-		"AppKey": ""
-	}
+  "Logging": {
+    "LogLevel": {
+      "Default": "Trace"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RodgortDB": ""
+  },
+  "ChatCredentials": {
+    "Email": "",
+    "Password": "",
+    "AcctCookie": ""
+  },
+  "PGDumpPath": "",
+  "PGDumpUsername": "",
+  "PGDumpPassword": "",
+  "HostName": "",
+  "JwtSigningKey": "",
+  "StackExchangeApiCredentials": {
+    "ClientId": "",
+    "ClientSecret": "",
+    "AppKey": ""
+  }
 }
